# zeal-zfighter

./: .gitignore  CHANGELOG  CMakeLists.txt  Makefile  README.md
assets/: palette.ase  shooter.zmt  tileset.aseprite
src/: assets.c  assets.h  attract.c  attract.h  belt.c  belt.h  boss.c  boss.h  bullet.c  bullet.h  enemy.c  enemy.h  hiscore.c  hiscore.h  main.c  main.h  patterns.c  patterns.h  player.c  player.h
tools/: wavegen.py
